<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_app"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/app_intro"
                    android:textColor="@color/SORA"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_right"
                    android:textColor="@color/SORA"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/about_author"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/author"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/author_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/phone_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/qq"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/qq_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/weixin"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/weixin_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/mail"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/mail_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/home_page"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/home_page_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/company"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/company_icon"
                    android:drawablePadding="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/web_site"
                    android:textColor="@color/SORA"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/web_site_icon"
                    android:drawablePadding="4dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
