<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_titlebar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightgray" />

    <com.love.cookies.doctor.View.Wedget.SettingItem
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:Setting_Title="@string/setting_version"
        custom:Setting_Icon="@drawable/version_icon"/>

    <com.love.cookies.doctor.View.Wedget.SettingItem
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:Setting_Title="@string/setting_about"
        custom:Setting_Icon="@drawable/about_icon"/>

    <com.love.cookies.doctor.View.Wedget.SettingItem
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:Setting_Title="@string/setting_support"
        custom:Setting_Icon="@drawable/support_icon"/>

</LinearLayout>
